[package]
name = "base64url"
version = "0.1.0"
authors = ["koyashiro <develop@koyashi.ro>"]
edition = "2021"
description = "Base64url encode or decode FILE or standard input, to standard output."

[dependencies]
anyhow = "1.0.58"
base64 = "0.13.0"
clap = { version = "3.2.11", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"
