[package]
name = "base64url"
version = "1.0.1"
authors = ["koyashiro <develop@koyashi.ro>"]
edition = "2021"
description = "Base64url encode or decode FILE or standard input, to standard output."
readme = "README.md"
homepage = "https://github.com/koyashiro/base64url"
repository = "https://github.com/koyashiro/base64url"
license = "MIT"
keywords = ["base64", "base64url"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.65"
base64 = "0.13.0"
clap = { version = "4.0.15", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"

[profile.release]
strip = "symbols"
