[package]
name = "base64url"
version = "1.0.3"
authors = ["koyashiro <develop@koyashi.ro>"]
edition = "2021"
description = "Base64url encode or decode FILE or standard input, to standard output."
readme = "README.md"
homepage = "https://github.com/koyashiro/base64url"
repository = "https://github.com/koyashiro/base64url"
license = "MIT OR Appach-2.0"
keywords = ["base64", "base64url"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
tempfile = "3.9.0"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
